[package]
name = "git-blamediff"
version = "0.1.2"
edition = "2021"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/git-blamediff"
repository = "https://github.com/d-e-s-o/git-blamediff.git"
readme = "README.md"
categories = [
  "command-line-utilities",
  "development-tools",
  "text-processing",
]
keywords = [
  "cli",
  "diff",
  "git",
  "text",
  "utility",
]
description = """
A program to automatically annotate changes to a file in git(1).
"""
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false

[dependencies]
diff-parse = {version = "0.1"}

[dev-dependencies]
tempfile = {version = "3.3.0", default-features = false}
